# salesforce_api

./: .cursorignore  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  .prettierrc.json  .taplo.toml  README.md  package-lock.json  package.json  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: hadolint.yml
examples/: __init__.py  sample.json  sample.py
scripts/: build_layer.sh  run-hadolint.sh
src/salesforce_api/: __init__.py  salesforce_api.py  salesforce_bulk.py  salesforce_bulk_job.py
