[project]
name = "salesforce-api"
version = "0.1.0"
description = "Add your description here"
dependencies = [
  "pydantic>=2.11.7",
  "pandas>=2.3.0",
  "requests>=2.32.4",
  "simple-salesforce>=1.12.6",
]
readme = "README.md"
requires-python = ">= 3.13"

[project.scripts]
hello = "salesforce_api:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
  "ruff>=0.12.0",
  "pytest>=8.4.1",
  "pytest-cov>=6.2.1",
  "pytest-mock>=3.14.1",
  "mypy>=1.16.1",
  "pandas-stubs>=2.2.3.250527",
  "types-requests>=2.32.4.20250611",
  "pre-commit>=4.2.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/salesforce_api"]
include = ["src/salesforce_api/py.typed"]

[tool.rye.scripts]
layer-build = "./scripts/build_layer.sh"
type-check = "mypy src/"
type-check-verbose = "mypy --verbose src/"
lint = "ruff check src/"
format = "ruff format src/"
pre-commit-all = "pre-commit run --all-files"

[tool.uv]
link-mode = "copy"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["B011"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true
exclude = ["examples/.*"]
